# gh_wx

./: .gitignore  CLAUDE.md  README.md  build.bat  check_config.py  config.xlsx  config_manager.py  export_final.py  gen_pdf.py  pyproject.toml  requirements.txt  search_messages.py  web_app.py  wechat_tool.spec
frontend/: script.js  style.css
output/: 复盘_上海电影_sh.601595_20251203_115156.xlsx  复盘_上海电影_sh.601595_20251203_134236.xlsx  搜索结果_20251118_072416.xlsx  搜索结果_20251120_162421.xlsx  搜索结果_20251127_093519.xlsx  搜索结果_20251130_222107.xlsx  茅台股价数据_10年_20251120_103604.xlsx
output/news/: 新闻_20251125_151709.json  新闻_20251125_151709.txt
scripts/: baidu_news_crawler.py  media_exporter.py  search_messages_optimized.py
src/wechat_decrypt_tool/: logging_config.py  wechat_decrypt.py
templates/: index.html
utils/: config_manager.py  dat_to_image.py  message_parser.py  stock_filter.py  stock_kline.py  wechat_key_extractor.py
